# pyOVNA

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: propagation_loss.ipynb  resonator_transmission_analysis.ipynb  transmission.ipynb
examples/data/: R1C2S1_spiral_W0p5_L10000_R50.OVNA4  R1C2S1_spiral_W0p5_L3000_R50.OVNA4  R1C2S1_spiral_W0p5_L6000_R50.OVNA4  R1C2S1_spiral_W1p0_L10000_R50.OVNA4  R1C2S1_spiral_W1p0_L3000_R50.OVNA4  R1C2S1_spiral_W1p0_L6000_R50.OVNA4  R3C2S2_single_curved_bus_disk_W0p5_G0p375_P3.OVNA4  R3C2S2_straight_wg_W0p75_tp_200nm.OVNA4
pyOVNA/: __init__.py  filters.py  fitting.py  io.py  processing.py
