[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyOVNA"
version = "0.1.0"
description = "A Python toolkit for processing custom Optical Vector Network Analyzer (OVNA) data"
authors = [
    { name = "Georgios Charalampous", email = "gcharalampous@ucdavis.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/gcharalampous/pyOVNA.git"
"Documentation" = "https://github.com/gcharalampous/pyOVNA#readme"
