[metadata]
name = pyOVNA
version = 0.2.0
description = A Python toolkit for processing custom Optical Vector Network Analyzer (OVNA) data
author = Georgios Charalampous
license = MIT

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    matplotlib
python_requires = >=3.7

